# guitar-gaming-client

./: Cargo.toml  README.md
assets/models/ingame/: guitar_neck.glb  note.glb
src/: main.rs
src/components/: button_minimal.rs  button_primary.rs  song_note.rs  song_notes.rs  song_timeline.rs
src/components/input_device_detail/: audio_bar.rs
src/constants/: ingame.rs
src/features/timeline/: timeline.rs
src/features/timeline/components/: note.rs
src/helpers/: input_device.rs  notes.rs  persistence.rs  song_library.rs  song_notes.rs  tuning.rs
src/plugins/: input_devices.rs
src/resources/: configuration.rs  input_device.rs  input_devices.rs  output_audio_song.rs  song_library.rs  song_loaded.rs
src/screens/input_device_detail/: audio_bar.rs  input_device_detail.rs  plugin.rs
src/screens/input_device_overview/: button_select_input_device.rs  input_device_overview.rs  plugin.rs
src/screens/song_play/: camera.rs  plugin.rs  song_play.rs
src/screens/song_select/: plugin.rs  song_list.rs  song_select.rs
src/screens/tune/: plugin.rs  tune.rs
src/states/: app_state.rs
src/states/menu/: input_device_detail.rs  input_device_overview.rs
