[package]
name = "guitar-gaming-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aubio = { version = "0.2.1", features = ["bindgen", "builtin", "fftw3"] }
bevy = "0.14.1"
bevy_mod_billboard = "0.7.0"
cpal = "0.15.3"
directories = "5.0.1"
pitch-detection = "0.3.0"
regex = "1.10.6"
rodio = "0.19.0"
serde = "1.0.205"
serde_json = "1.0.122"
uuid = "1.10.0"
